--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "BY Blog",
-  "short_name": "BY Blog",
-  "description": "A personal blog by engineer",
+  "name": "Qi Blog",
+  "short_name": "Qi Blog",
+  "description": "In case I forget",
   "icons": [{
     "src": "icons/pwa_icon_128.png",
     "sizes": "128x128",
